--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
-    "save-dev": "0.0.1-security"
+    "save-dev": "0.0.1-security",
+    "styled-components": "^5.2.0"
   },
   "scripts": {
     "predeploy": "npm run build",
