--- a/package.json
+++ b/package.json
@@ -36,5 +36,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@iconify/icons-ion": "^1.0.13",
+    "@iconify/icons-zondicons": "^1.0.0",
+    "@iconify/react": "^1.1.3"
   }
 }
