--- a/package.json
+++ b/package.json
@@ -39,7 +39,10 @@
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "node-sass": "^4.14.1",
+    "sass-loader": "^10.0.2"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Ivan468/react8.git"
