--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-select": "^3.1.0",
     "save-dev": "0.0.1-security",
     "styled-components": "^5.2.0"
   },
