--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "gh-pages": "^3.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "save-dev": "0.0.1-security",
     "styled-components": "^5.2.0"
@@ -36,5 +38,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@iconify/icons-ion": "^1.0.13",
+    "@iconify/icons-zondicons": "^1.0.0",
+    "@iconify/react": "^1.1.3"
   }
 }
